--- a/HTML Fundamentals/index.html
+++ b/HTML Fundamentals/index.html
@@ -19,9 +19,9 @@
     <h1>📘 The Code Magazine</h1>
 
     <a href="blog.html">blog</a>
-    <a href="#">challenges</a>
-    <a href="#">Flexbox</a>
-    <a href="#">CSS Grid</a>
+    <a href="challenges.html">challenges</a>
+    <a href="Flexbox.html">Flexbox</a>
+    <a href="CSS Grid.html">CSS Grid</a>
     
 
     <h2>The Basic Language of the Web: HTML</h2>
